Move to Java 17! (#8035)
* Improve Java Version by more than 2x!
```
      _                    _ _____ 
     | | __ ___   ____ _  / |___  |
  _  | |/ _` \ \ / / _` | | |  / / 
 | |_| | (_| |\ V / (_| | | | / /  
  \___/ \__,_| \_/ \__,_| |_|/_/   
```
* Update spark to 3.x 
* Many necessary changes to support the upgrade.                              

---------

Co-authored-by: Louis Bergelson <louisb@broadinstitute.org>
Co-authored-by: Samuel Lee <lee.samuel.k@gmail.com>